GIt 최신 버전 가져오는 기능 추가