@@ -1,7 +1,19 @@
 # Code418 Frontend Build (작성중)
 이 폴더는 개발자를 위한 공간 입니다.
 
+# 바로 실행
+## Windwos
+```
+java ^
+  --module-path E:\Code-481\Frontend\Build-File\lib\javafx-sdk-21.0.7\lib ^
+  --add-modules javafx.controls,javafx.fxml,javafx.web ^
+  -cp "deu_info-0.0.1.jar;E:\Code-481\Frontend\Build-File\lib\jgit\*" ^
+  com.code418.frontend.deu_info.App
+```
+
 # Install 패키지를 만드는 방법
+
 >  ## 안내사항
 >  Jar파일 같은경우 빌드를 하는 순간 자동으로 이쪽 파일로 필드가 됨니다. <br/>
 >  버전을 바꾼경우 혼선을 방지하기 위해 이전 버전을 제거해주세요.
+
